# JNU26CPP_Term_Project

./: .env.example  .gitignore  CMakeLists.txt  README.md  main.cpp  主线任务.md  作弊系统.md  战斗系统设计.md  敌人系统设计.md
data/: cheats.json  enemies.json  player_save.txt  shop_items.txt  tasks.json
include/: AIAssistant.h  AdventureManager.h  AutoSaveService.h  BattleAI.h  BattleDeck.h  BattleMapper.h  BattleSystem.h  BattleTypes.h  Character.h  CheatManager.h  ConsoleUI.h  Enemy.h  EnemyFactory.h  EnvLoader.h  GameConfig.h  GameManager.h  Inventory.h  Item.h  PathUtil.h  SaveManager.h  Shop.h  SimpleJson.h  Task.h  TaskSystem.h
scripts/: ai_helper.py  battle_ai.py  help_ai.py
src/: AIAssistant.cpp  AdventureManager.cpp  AutoSaveService.cpp  BattleAI.cpp  BattleDeck.cpp  BattleMapper.cpp  BattleSystem.cpp  BattleTypes.cpp  Character.cpp  CheatManager.cpp  ConsoleUI.cpp  Enemy.cpp  EnemyFactory.cpp  EnvLoader.cpp  GameManager.cpp  Inventory.cpp  Item.cpp  SaveManager.cpp  Shop.cpp  SimpleJson.cpp  Task.cpp  TaskSystem.cpp
